Fix scrollbar bug for IE7 (RM-2635)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@17070 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/ClassicBlue/HTML/TabbedMultiView.css
+++ b/Remotion/Web/Core/Res/Themes/ClassicBlue/HTML/TabbedMultiView.css
@@ -33,6 +33,12 @@ div.tabbedMultiView div.wrapper
  background-color: white;
 }
 
+body.msie7 div.tabbedMultiViewActiveView div.content
+{
+  width: 97.5%;
+  height: 97.5%;
+}
+
 div.tabbedMultiView div.content
 {
 }
